styles.css
body {
	font-family: 'Roboto', sans-serif;
	overflow-x: hidden;
}

.slanted-background-wrap {
	position: absolute;
	top: 0;
	left: 0;
	filter: drop-shadow(0px 3px 8px rgba(0, 0, 0, 0.24));
	z-index: -1;
}
.slanted-background {
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	height: 700px;
	background-color: #0891b2;
	clip-path: polygon(0 0, 100% 0, 100% 55%, 0 100%);
}

.about-me__icons {
	display: flex;
	gap: 30px;
	position: absolute;
	bottom: 2rem;
	right: 2.5rem;
}

.about-me__icons > svg {
	width: 40px;
	height: 40px;
}

.about-me__container {
	background-color: white;
	margin: 8rem 6rem;
	margin-left: 10rem;
	position: relative;
	padding: 2.5vw;
	box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
}

.about-me__container > h2 {
	font-family: 'Playfair display', serif;
	font-size: 3rem;
	font-weight: 500;
}

.about-me__container > p {
	color: #585858;
	font-size: 1.5rem;
	margin-top: 1rem;
	margin-bottom: 6rem;
}

.about-me__image {
	background-color: #9ce8fc;
	float: left;
	height: min(600px, 50vw);
	width: min(600px, 50vw);
	box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
	margin-left: -6.5rem;
	margin-right: 2.5rem;
	margin-top: -6rem;
	display: flex;
	justify-content: center;
	align-items: flex-end;
	text-align: center;
	padding: 0 0.5rem;
}

.about-me__image > h1 {
	color: white;
	font-family: 'Playfair display', serif;
	font-size: calc(0.25rem + 5vw);
	font-weight: 400;
	text-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
}

@media only screen and (max-width: 48rem) {
	.slanted-background {
		height: 500px;
	}

	.about-me__container {
		margin-inline: auto;
		width: 80vw;
		padding: 1rem;
	}

	.about-me__image {
		margin: 0;
		margin-right: 0.75rem;
		margin-left: clamp(-4rem, -12.5vw, -2rem);
		margin-top: clamp(-6rem, -15vw, -4rem);
		height: max(45vw, 200px);
		width: max(45vw, 200px);
		display: block;
		position: relative;
	}

	.about-me__image > h1 {
		position: absolute;
		right: -45vw;
		top: -1vw;
		font-size: 8vw;
	}

	.about-me__container > h2 {
		margin-top: 2.5rem;
		font-size: 2.25rem;
		width: 100%;
		text-align: center;
	}

	.about-me__container > p {
		font-size: 1.25rem;
		margin-top: 0.5rem;
	}
}

@media only screen and (max-width: 27rem) {
	.about-me__image {
		position: static;
		margin: 2rem 1rem;
		display: flex;
		justify-content: center;
		align-items: flex-end;
		text-align: left;
		float: none;
		width: 90%;
		margin-inline: auto;
		min-height: 30rem;
		padding: 0 1rem;
	}

	.about-me__image > h1 {
		font-size: 18vw;
		margin-bottom: -0.5rem;
	}

	.about-me__image > h1 {
		position: static;
	}

	.about-me__container {
		background: none;
		box-shadow: none;
		margin: 0;
		margin-inline: auto;
		width: 90%;
		padding: 0;
	}

	.about-me__icons {
		bottom: -4rem;
	}
}

.my-work {
	margin: 5rem;
}

.my-work__title {
	font-size: 3rem;
	font-weight: 400;
	font-family: 'Playfair display', serif;
}

.my-work__container {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 3rem;
}

.my-work__project {
	flex: 1 0 20rem;
	display: flex;
	max-width: 30rem;
	flex-direction: column;
	box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.24);
}

.my-work__project-screenshot {
	width: 100%;
	aspect-ratio: 8 / 6;
	display: flex;
	align-items: center;
	text-align: center;
	font-size: 3rem;
	font-weight: 400;
	font-family: 'Playfair display', serif;
	color: white;
	padding: 0 2rem;
}

.my-work__project:nth-child(1) > .my-work__project-screenshot {
	background-color: #9e1c1c;
}

.my-work__project:nth-child(2) > .my-work__project-screenshot {
	background-color: #7c75ca;
}

.my-work__project:nth-child(3) > .my-work__project-screenshot {
	background-color: #c363b4;
}

.my-work__project:nth-child(4) > .my-work__project-screenshot {
	background-color: #d88f39;
}

.my-work__project:nth-child(5) > .my-work__project-screenshot {
	background-color: #7c75ca;
}

.my-work__project:nth-child(6) > .my-work__project-screenshot {
	background-color: #5e8f4d;
}

.my-work__project-info {
	display: flex;
	flex-direction: column;
	padding: 8px 24px;
	gap: 0.75rem;
}

.my-work__project-name-and-icons {
	display: flex;
	align-items: center;
}

.my-work__project-name {
	font-family: 'Playfair display', serif;
	margin-right: auto;
	font-size: 1.75rem;
	font-weight: 500;
}

.my-work__project-icons {
	display: flex;
	gap: 16px;
}

.my-work__project-icons > svg {
	width: 30px;
	height: 30px;
}

.my-work__project-description {
	margin-bottom: 64px;
	color: #585858;
	font-size: 1.25rem;
	line-height: 1.15;
}

.footer {
	background-color: #0891b2;
	color: white;
	display: flex;
	padding: 76px;
	padding-right: 0;
	gap: 48px;
}

.footer__contact {
	display: flex;
	flex-direction: column;
	gap: 2em;
}

.footer__contact-header {
	font-size: 3rem;
	font-weight: 400;
	font-family: 'Playfair display', serif;
	color: white;
}

.footer__contact p {
	font-size: 1.25rem;
	font-weight: 400;
}

.footer__contact-details {
	display: flex;
	flex-direction: column;
	gap: 0.75rem;
}

.footer__contact-details > div {
	display: flex;
	gap: 1rem;
	align-items: center;
}

.footer__contact-details > div > svg {
	width: 40px;
	height: 40px;
}

@media only screen and (max-width: 90rem) {
	.footer__contact-details > div > svg {
		display: none;
	}
}

.footer__contact-icons {
	display: flex;
	gap: 30px;
}

.footer__contact-icons > svg {
	width: 48px;
	height: 48px;
}

.footer-image {
	background-color: #9ce8fc;
	height: 550px;
	width: 65%;
	margin-right: 32px;
}

@media only screen and (max-width: 48rem) {
	.footer {
		flex-direction: column;
		padding: 0;
	}

	.footer__contact {
		padding: 16px;
	}

  .footer__contact-request {
    margin-top: -2rem;
    font-weight: 400;
  }

	.footer__contact-header {
    width: 100%;
    text-align: center;
  }

  .footer__contact-details p,
  .footer__contact-address {
    font-size: 1.1rem !important;
  }

  .footer__contact-details {
    gap: .25rem;
  }

	.footer-image {
		width: 100%;
		margin: 0;
	}

  .footer__contact-icons {
    margin-inline: auto;
  }
}

